--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.geojson filter=lfs diff=lfs merge=lfs -text
 files/ownership.js filter=lfs diff=lfs merge=lfs -text
+*.js filter=lfs diff=lfs merge=lfs -text
